chore: Reconfigure packages

--- a/designs/aaron/package.json
+++ b/designs/aaron/package.json
@@ -52,8 +52,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
