--- a/designs/examples/package.json
+++ b/designs/examples/package.json
@@ -48,8 +48,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
