--- a/designs/carlita/package.json
+++ b/designs/carlita/package.json
@@ -57,8 +57,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
