--- a/designs/lucy/package.json
+++ b/designs/lucy/package.json
@@ -51,8 +51,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
