--- a/designs/plugintest/package.json
+++ b/designs/plugintest/package.json
@@ -72,8 +72,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
