--- a/designs/simone/package.json
+++ b/designs/simone/package.json
@@ -56,8 +56,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
