--- a/designs/teagan/package.json
+++ b/designs/teagan/package.json
@@ -53,8 +53,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
