--- a/designs/wahid/package.json
+++ b/designs/wahid/package.json
@@ -54,8 +54,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
