--- a/packages/config-helpers/package.json
+++ b/packages/config-helpers/package.json
@@ -35,8 +35,7 @@
   "devDependencies": {},
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
