--- a/packages/mui-theme/package.json
+++ b/packages/mui-theme/package.json
@@ -41,8 +41,7 @@
   "devDependencies": {},
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
