--- a/packages/pattern-info/package.json
+++ b/packages/pattern-info/package.json
@@ -36,8 +36,7 @@
   "devDependencies": {},
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
