--- a/packages/remark-jargon/package.json
+++ b/packages/remark-jargon/package.json
@@ -40,8 +40,7 @@
   "devDependencies": {},
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
