--- a/plugins/plugin-bundle/package.json
+++ b/plugins/plugin-bundle/package.json
@@ -61,8 +61,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
