--- a/plugins/plugin-dimension/package.json
+++ b/plugins/plugin-dimension/package.json
@@ -49,8 +49,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
