chore(new-design): Tweaks to package

--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -79,6 +79,7 @@ packageJson:
     files:
       - README.md
       - package.json
+      - dist/*
       - lib/**/*
       - shared/**/*
       - templates/**/*
