--- a/packages/new-design/package.json
+++ b/packages/new-design/package.json
@@ -20,12 +20,13 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "scripts": {
-    "build": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs",
+    "build": "node build.js",
     "clean": "rimraf dist",
     "symlink": "mkdir -p ./node_modules/@freesewing && cd ./node_modules/@freesewing && ln -s -f ../../../* . && cd -",
     "lab": "cd ../../sites/lab && yarn start",
     "tips": "node ../../scripts/help.mjs",
-    "cibuild_step6": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs"
+    "prebuild": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs",
+    "cibuild_step6": "node build.js"
   },
   "peerDependencies": {},
   "dependencies": {},
@@ -33,6 +34,7 @@
   "files": [
     "README.md",
     "package.json",
+    "dist/*",
     "lib/**/*",
     "shared/**/*",
     "templates/**/*",
