--- a/packages/new-design/package.json
+++ b/packages/new-design/package.json
@@ -29,7 +29,15 @@
     "cibuild_step6": "node build.js"
   },
   "peerDependencies": {},
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.27.2",
+    "chalk": "^5.0.1",
+    "execa": "^6.1.0",
+    "mustache": "^4.2.0",
+    "ora": "^6.1.0",
+    "prompts": "^2.4.2",
+    "recursive-readdir": "^2.2.2"
+  },
   "devDependencies": {},
   "files": [
     "README.md",
