--- a/packages/new-design/package.json
+++ b/packages/new-design/package.json
@@ -18,14 +18,13 @@
     "freesewing"
   ],
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "scripts": {
     "build": "node build.js",
     "clean": "rimraf dist",
     "symlink": "mkdir -p ./node_modules/@freesewing && cd ./node_modules/@freesewing && ln -s -f ../../../* . && cd -",
     "lab": "cd ../../sites/lab && yarn start",
     "tips": "node ../../scripts/help.mjs",
-    "prebuild": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs",
+    "prebuild": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs && cp ../../scripts/banner.mjs ./lib",
     "cibuild_step6": "node build.js"
   },
   "peerDependencies": {},
@@ -58,6 +57,6 @@
     "npm": ">=6"
   },
   "bin": {
-    "@freesewing/new-design": "index.mjs"
+    "@freesewing/new-design": "dist/index.js"
   }
 }
