--- a/packages/new-design/package.json
+++ b/packages/new-design/package.json
@@ -19,13 +19,12 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "build": "node build.js",
+    "build": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs && cp ../../scripts/banner.mjs ./lib && node build.js",
     "clean": "rimraf dist",
     "symlink": "mkdir -p ./node_modules/@freesewing && cd ./node_modules/@freesewing && ln -s -f ../../../* . && cd -",
     "lab": "cd ../../sites/lab && yarn start",
     "tips": "node ../../scripts/help.mjs",
-    "prebuild": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs && cp ../../scripts/banner.mjs ./lib",
-    "cibuild_step6": "node build.js"
+    "cibuild_step6": "SITE=new-design/shared node ../../sites/shared/prebuild/i18n-only.mjs && cp ../../scripts/banner.mjs ./lib && node build.js"
   },
   "peerDependencies": {},
   "dependencies": {
@@ -55,8 +54,5 @@
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6"
-  },
-  "bin": {
-    "@freesewing/new-design": "dist/index.js"
   }
 }
