--- a/sites/lab/package.json
+++ b/sites/lab/package.json
@@ -6,7 +6,7 @@
     "dev": "node --experimental-json-modules ./node_modules/.bin/next dev -p 8000",
     "develop": "node --experimental-json-modules ./node_modules/.bin/next dev -p 8000",
     "start": "yarn prebuild && yarn dev",
-    "prebuild": "SITE=lab node --experimental-json-modules ../shared/prebuild/index.mjs",
+    "prebuild": "node --experimental-json-modules ../shared/prebuild/index.mjs",
     "cibuild": "yarn prebuild && node --experimental-json-modules ./node_modules/.bin/next build",
     "build": "node --experimental-json-modules ./node_modules/.bin/next build",
     "clean": "rimraf pages/*.mjs && rimraf pages/*/*.mjs && rimraf pages/v/*/*.mjs",
