--- a/sites/lab/package.json
+++ b/sites/lab/package.json
@@ -3,12 +3,12 @@
   "version": "2.21.0-rc.2",
   "private": true,
   "scripts": {
-    "dev": "node --experimental-json-modules ./node_modules/.bin/next dev -p 8000",
-    "develop": "node --experimental-json-modules ./node_modules/.bin/next dev -p 8000",
+    "dev": "node --experimental-json-modules ../../node_modules/.bin/next dev -p 8000",
+    "develop": "node --experimental-json-modules ../../node_modules/.bin/next dev -p 8000",
     "start": "yarn prebuild && yarn dev",
     "prebuild": "node --experimental-json-modules ../shared/prebuild/index.mjs",
-    "cibuild": "yarn prebuild && node --experimental-json-modules ./node_modules/.bin/next build",
-    "build": "node --experimental-json-modules ./node_modules/.bin/next build",
+    "cibuild": "yarn prebuild && node --experimental-json-modules ../../node_modules/.bin/next build",
+    "build": "node --experimental-json-modules ../../node_modules/.bin/next build",
     "clean": "rimraf pages/*.mjs && rimraf pages/*/*.mjs && rimraf pages/v/*/*.mjs",
     "export": "yarn prebuild && next build && next export",
     "lint": "next lint",
