--- a/designs/bee/package.json
+++ b/designs/bee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/bee",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "A FreeSewing pattern for a bikini top",
   "author": "bobgeorgethe3rd (https://github.com/bobgeorgethe3rd)",
   "homepage": "https://freesewing.org/",
@@ -40,10 +40,10 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.0-rc.3",
-    "@freesewing/plugin-bundle": "^2.21.0-rc.3",
-    "@freesewing/config-helpers": "^2.21.0-rc.3",
-    "@freesewing/bella": "^2.21.0-rc.3"
+    "@freesewing/core": "^2.21.0",
+    "@freesewing/plugin-bundle": "^2.21.0",
+    "@freesewing/config-helpers": "^2.21.0",
+    "@freesewing/bella": "^2.21.0"
   },
   "dependencies": {},
   "devDependencies": {
@@ -56,7 +56,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
