--- a/designs/plugintest/package.json
+++ b/designs/plugintest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/plugintest",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "A FreeSewing pattern to test (y)our plugins",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,30 +40,30 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.0-rc.3",
-    "@freesewing/plugin-bundle": "^2.21.0-rc.3",
-    "@freesewing/config-helpers": "^2.21.0-rc.3",
-    "@freesewing/plugin-banner": "^2.21.0-rc.3",
-    "@freesewing/plugin-bartack": "^2.21.0-rc.3",
-    "@freesewing/plugin-bust": "^2.21.0-rc.3",
-    "@freesewing/plugin-buttons": "^2.21.0-rc.3",
-    "@freesewing/plugin-cutonfold": "^2.21.0-rc.3",
-    "@freesewing/plugin-dimension": "^2.21.0-rc.3",
-    "@freesewing/plugin-flip": "^2.21.0-rc.3",
-    "@freesewing/plugin-gore": "^2.21.0-rc.3",
-    "@freesewing/plugin-grainline": "^2.21.0-rc.3",
-    "@freesewing/plugin-i18n": "^2.21.0-rc.3",
-    "@freesewing/plugin-logo": "^2.21.0-rc.3",
-    "@freesewing/plugin-measurements": "^2.21.0-rc.3",
-    "@freesewing/plugin-mirror": "^2.21.0-rc.3",
-    "@freesewing/plugin-notches": "^2.21.0-rc.3",
-    "@freesewing/plugin-round": "^2.21.0-rc.3",
-    "@freesewing/plugin-scalebox": "^2.21.0-rc.3",
-    "@freesewing/plugin-sprinkle": "^2.21.0-rc.3",
-    "@freesewing/plugin-svgattr": "^2.21.0-rc.3",
-    "@freesewing/plugin-theme": "^2.21.0-rc.3",
-    "@freesewing/plugin-title": "^2.21.0-rc.3",
-    "@freesewing/plugin-validate": "^2.21.0-rc.3"
+    "@freesewing/core": "^2.21.0",
+    "@freesewing/plugin-bundle": "^2.21.0",
+    "@freesewing/config-helpers": "^2.21.0",
+    "@freesewing/plugin-banner": "^2.21.0",
+    "@freesewing/plugin-bartack": "^2.21.0",
+    "@freesewing/plugin-bust": "^2.21.0",
+    "@freesewing/plugin-buttons": "^2.21.0",
+    "@freesewing/plugin-cutonfold": "^2.21.0",
+    "@freesewing/plugin-dimension": "^2.21.0",
+    "@freesewing/plugin-flip": "^2.21.0",
+    "@freesewing/plugin-gore": "^2.21.0",
+    "@freesewing/plugin-grainline": "^2.21.0",
+    "@freesewing/plugin-i18n": "^2.21.0",
+    "@freesewing/plugin-logo": "^2.21.0",
+    "@freesewing/plugin-measurements": "^2.21.0",
+    "@freesewing/plugin-mirror": "^2.21.0",
+    "@freesewing/plugin-notches": "^2.21.0",
+    "@freesewing/plugin-round": "^2.21.0",
+    "@freesewing/plugin-scalebox": "^2.21.0",
+    "@freesewing/plugin-sprinkle": "^2.21.0",
+    "@freesewing/plugin-svgattr": "^2.21.0",
+    "@freesewing/plugin-theme": "^2.21.0",
+    "@freesewing/plugin-title": "^2.21.0",
+    "@freesewing/plugin-validate": "^2.21.0"
   },
   "dependencies": {},
   "devDependencies": {
@@ -76,7 +76,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
