--- a/designs/rendertest/package.json
+++ b/designs/rendertest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/rendertest",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "A FreeSewing pattern to test (y)our render engine our CSS",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,9 +40,9 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.0-rc.3",
-    "@freesewing/plugin-bundle": "^2.21.0-rc.3",
-    "@freesewing/config-helpers": "^2.21.0-rc.3"
+    "@freesewing/core": "^2.21.0",
+    "@freesewing/plugin-bundle": "^2.21.0",
+    "@freesewing/config-helpers": "^2.21.0"
   },
   "dependencies": {},
   "devDependencies": {
@@ -55,7 +55,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
