--- a/packages/config-helpers/package.json
+++ b/packages/config-helpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/config-helpers",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "A FreeSewing package to facilitate pattern configurations",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -39,7 +39,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
