--- a/packages/new-design/package.json
+++ b/packages/new-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/new-design",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "Initializer package for a new FreeSewing design: npx @freesewing/new-design",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -49,7 +49,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
