--- a/packages/remark-jargon/package.json
+++ b/packages/remark-jargon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remark-jargon",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "A Remark plugin for jargon terms",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -44,7 +44,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
