--- a/plugins/plugin-bundle/package.json
+++ b/plugins/plugin-bundle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/plugin-bundle",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "An umbrella package of 8 essential FreeSewing build-time plugins",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -41,23 +41,23 @@
     "cibuild_step2": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.0-rc.3"
+    "@freesewing/core": "^2.21.0"
   },
   "dependencies": {},
   "devDependencies": {
     "mocha": "^10.0.0",
     "chai": "^4.2.0",
-    "@freesewing/plugin-banner": "^2.21.0-rc.3",
-    "@freesewing/plugin-buttons": "^2.21.0-rc.3",
-    "@freesewing/plugin-cutonfold": "^2.21.0-rc.3",
-    "@freesewing/plugin-dimension": "^2.21.0-rc.3",
-    "@freesewing/plugin-grainline": "^2.21.0-rc.3",
-    "@freesewing/plugin-logo": "^2.21.0-rc.3",
-    "@freesewing/plugin-mirror": "^2.21.0-rc.3",
-    "@freesewing/plugin-title": "^2.21.0-rc.3",
-    "@freesewing/plugin-scalebox": "^2.21.0-rc.3",
-    "@freesewing/plugin-round": "^2.21.0-rc.3",
-    "@freesewing/plugin-sprinkle": "^2.21.0-rc.3"
+    "@freesewing/plugin-banner": "^2.21.0",
+    "@freesewing/plugin-buttons": "^2.21.0",
+    "@freesewing/plugin-cutonfold": "^2.21.0",
+    "@freesewing/plugin-dimension": "^2.21.0",
+    "@freesewing/plugin-grainline": "^2.21.0",
+    "@freesewing/plugin-logo": "^2.21.0",
+    "@freesewing/plugin-mirror": "^2.21.0",
+    "@freesewing/plugin-title": "^2.21.0",
+    "@freesewing/plugin-scalebox": "^2.21.0",
+    "@freesewing/plugin-round": "^2.21.0",
+    "@freesewing/plugin-sprinkle": "^2.21.0"
   },
   "files": [
     "dist/*",
@@ -65,7 +65,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
