--- a/sites/strapi/package.json
+++ b/sites/strapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/strapi",
-  "version": "2.21.0-rc.3",
+  "version": "2.21.0",
   "description": "Freesewing's Strapi instance",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://posts.freesewing.org/",
