fix(config-helpers): Guard against missing measurements

--- a/config/changelog.yaml
+++ b/config/changelog.yaml
@@ -1,5 +1,7 @@
 Unreleased:
-  Added:
+  Fixed:
+    config-helpers:
+      - Guard against missing measurements in toAbs()
 
 2.21.1:
   date: 2022-06-28
