--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
   ],
   "version": "0.0.0",
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
     "autoprefixer": "^10.4.0",
     "handlebars": "^4.7.7",
     "jsonfile": "^6.1.0",
