fix(new-design): Add bin entry to package.json

--- a/config/exceptions.yaml
+++ b/config/exceptions.yaml
@@ -76,6 +76,8 @@ packageJson:
   lunetius: &starf
     author: Starfetch (https://github.com/starfetch)
   new-design:
+    bin:
+      new-design: "dist/index.js"
     files:
       - README.md
       - package.json
