--- a/packages/gatsby-remark-jargon/package.json
+++ b/packages/gatsby-remark-jargon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-remark-jargon",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A gatsby-transformer-remark sub-plugin for jargon terms",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -35,7 +35,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "remark-jargon": "^2.21.3-rc.0"
+    "remark-jargon": "^2.21.3"
   },
   "devDependencies": {},
   "files": [
@@ -44,7 +44,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
