--- a/designs/bent/package.json
+++ b/designs/bent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/bent",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing pattern for a menswear body block with a two-part sleeve",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,11 +40,11 @@
     "cibuild_step4": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0",
-    "@freesewing/plugin-bundle": "^2.21.3-rc.0",
-    "@freesewing/config-helpers": "^2.21.3-rc.0",
-    "@freesewing/brian": "^2.21.3-rc.0",
-    "@freesewing/plugin-mirror": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3",
+    "@freesewing/plugin-bundle": "^2.21.3",
+    "@freesewing/config-helpers": "^2.21.3",
+    "@freesewing/brian": "^2.21.3",
+    "@freesewing/plugin-mirror": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -57,7 +57,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
