--- a/designs/carlita/package.json
+++ b/designs/carlita/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/carlita",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing pattern for Sherlock Holmes cosplay; Or just a nice long coat",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,15 +40,15 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0",
-    "@freesewing/plugin-bundle": "^2.21.3-rc.0",
-    "@freesewing/config-helpers": "^2.21.3-rc.0",
-    "@freesewing/brian": "^2.21.3-rc.0",
-    "@freesewing/bent": "^2.21.3-rc.0",
-    "@freesewing/carlton": "^2.21.3-rc.0",
-    "@freesewing/plugin-bust": "^2.21.3-rc.0",
-    "@freesewing/plugin-buttons": "^2.21.3-rc.0",
-    "@freesewing/plugin-mirror": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3",
+    "@freesewing/plugin-bundle": "^2.21.3",
+    "@freesewing/config-helpers": "^2.21.3",
+    "@freesewing/brian": "^2.21.3",
+    "@freesewing/bent": "^2.21.3",
+    "@freesewing/carlton": "^2.21.3",
+    "@freesewing/plugin-bust": "^2.21.3",
+    "@freesewing/plugin-buttons": "^2.21.3",
+    "@freesewing/plugin-mirror": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -61,7 +61,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
