--- a/designs/charlie/package.json
+++ b/designs/charlie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/charlie",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing pattern for chino trousers",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,12 +40,12 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0",
-    "@freesewing/plugin-bundle": "^2.21.3-rc.0",
-    "@freesewing/config-helpers": "^2.21.3-rc.0",
-    "@freesewing/plugin-bartack": "^2.21.3-rc.0",
-    "@freesewing/plugin-mirror": "^2.21.3-rc.0",
-    "@freesewing/titan": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3",
+    "@freesewing/plugin-bundle": "^2.21.3",
+    "@freesewing/config-helpers": "^2.21.3",
+    "@freesewing/plugin-bartack": "^2.21.3",
+    "@freesewing/plugin-mirror": "^2.21.3",
+    "@freesewing/titan": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -58,7 +58,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
