--- a/designs/jaeger/package.json
+++ b/designs/jaeger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/jaeger",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing pattern for a sport coat style jacket",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,13 +40,13 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0",
-    "@freesewing/plugin-bundle": "^2.21.3-rc.0",
-    "@freesewing/config-helpers": "^2.21.3-rc.0",
-    "@freesewing/brian": "^2.21.3-rc.0",
-    "@freesewing/bent": "^2.21.3-rc.0",
-    "@freesewing/plugin-buttons": "^2.21.3-rc.0",
-    "@freesewing/plugin-mirror": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3",
+    "@freesewing/plugin-bundle": "^2.21.3",
+    "@freesewing/config-helpers": "^2.21.3",
+    "@freesewing/brian": "^2.21.3",
+    "@freesewing/bent": "^2.21.3",
+    "@freesewing/plugin-buttons": "^2.21.3",
+    "@freesewing/plugin-mirror": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -59,7 +59,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
