--- a/designs/simone/package.json
+++ b/designs/simone/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/simone",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing pattern for a button down shirt (Simone = Simon for people with breasts)",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,14 +40,14 @@
     "cibuild_step5": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0",
-    "@freesewing/plugin-bundle": "^2.21.3-rc.0",
-    "@freesewing/config-helpers": "^2.21.3-rc.0",
-    "@freesewing/brian": "^2.21.3-rc.0",
-    "@freesewing/simon": "^2.21.3-rc.0",
-    "@freesewing/plugin-buttons": "^2.21.3-rc.0",
-    "@freesewing/plugin-flip": "^2.21.3-rc.0",
-    "@freesewing/plugin-bust": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3",
+    "@freesewing/plugin-bundle": "^2.21.3",
+    "@freesewing/config-helpers": "^2.21.3",
+    "@freesewing/brian": "^2.21.3",
+    "@freesewing/simon": "^2.21.3",
+    "@freesewing/plugin-buttons": "^2.21.3",
+    "@freesewing/plugin-flip": "^2.21.3",
+    "@freesewing/plugin-bust": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -60,7 +60,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
