--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/models",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "Body measurements data for a range of default sizes",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -35,7 +35,7 @@
     "cibuild_step6": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/utils": "^2.21.3-rc.0"
+    "@freesewing/utils": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {},
@@ -45,7 +45,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
