--- a/plugins/plugin-svgattr/package.json
+++ b/plugins/plugin-svgattr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/plugin-svgattr",
-  "version": "2.21.3-rc.0",
+  "version": "2.21.3",
   "description": "A FreeSewing plugin to set SVG attributes",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -40,7 +40,7 @@
     "cibuild_step1": "node build.js"
   },
   "peerDependencies": {
-    "@freesewing/core": "^2.21.3-rc.0"
+    "@freesewing/core": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
@@ -53,7 +53,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "tag": "next"
+    "tag": "latest"
   },
   "engines": {
     "node": ">=14.0.0",
