--- a/designs/aaron/package.json
+++ b/designs/aaron/package.json
@@ -43,8 +43,7 @@
     "@freesewing/core": "^2.21.3",
     "@freesewing/plugin-bundle": "^2.21.3",
     "@freesewing/config-helpers": "^2.21.3",
-    "@freesewing/brian": "^2.21.3",
-    "@freesewing/models": "^2.21.3"
+    "@freesewing/brian": "^2.21.3"
   },
   "dependencies": {},
   "devDependencies": {
