feat(aaron): Add support for high-bust draft. See #2386

--- a/config/changelog.yaml
+++ b/config/changelog.yaml
@@ -1,5 +1,7 @@
 Unreleased:
   Added:
+    aaron:
+      - Support drafting for high bust
     hugo:
       - Support drafting for high bust
         Closes [#802](https://github.com/freesewing/freesewing/issues/802)
