feat(bent): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -24,6 +24,7 @@ bent:
   peer:
     '@freesewing/brian': *freesewing
     '@freesewing/plugin-mirror': *freesewing
+    '@freesewing/plugin-bust': *freesewing
 breanna:
   peer:
     '@freesewing/brian': *freesewing
