feat(brian): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -31,6 +31,7 @@ breanna:
 brian:
   peer:
     '@freesewing/plugin-mirror': *freesewing
+    '@freesewing/plugin-bust': *freesewing
 carlita:
   peer:
     '@freesewing/brian': *freesewing
