feat(carlton): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -46,6 +46,7 @@ carlton:
     '@freesewing/bent': *freesewing
     '@freesewing/plugin-buttons': *freesewing
     '@freesewing/plugin-mirror': *freesewing
+    '@freesewing/plugin-bust': *freesewing
 charlie:
   peer:
     '@freesewing/plugin-bartack': *freesewing
