feat(diana): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -115,6 +115,7 @@ create-freesewing-pattern:
 diana:
   peer:
     '@freesewing/brian': *freesewing
+    '@freesewing/plugin-bust': *freesewing
 examples:
   peer:
     '@freesewing/plugin-mirror': *freesewing
