feat(huey): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -131,6 +131,7 @@ holmes:
 huey:
   peer:
     '@freesewing/brian': *freesewing
+    '@freesewing/plugin-bust': *freesewing
 hugo:
   peer:
     '@freesewing/brian': *freesewing
