feat(jaeger): Add support for high-bust draft. See #2386

--- a/config/dependencies.yaml
+++ b/config/dependencies.yaml
@@ -145,7 +145,7 @@ jaeger:
   peer:
     '@freesewing/brian': *freesewing
     '@freesewing/bent': *freesewing
-    '@freesewing/plugin-buttons': *freesewing
+    '@freesewing/plugin-bust': *freesewing
     '@freesewing/plugin-mirror': *freesewing
 models:
   peer:
